@@ -5,7 +5,8 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Support selected state of tab-list on link (a tag) too.
+  [mathias.leimgruber]
 
 
 1.3.0 (2016-05-20)
